# tic-tac-toe

./: README.md  tic-tac-toe.cabal
src/: Game.hs  Main.hs
