cabal-version:      2.4
name:               tic-tac-toe
version:            0.1.0.0
synopsis:           A Tic-tac-toe console game made in Haskell
homepage:
license:            MIT
license-file:       LICENSE
author:             Ismael Carlos Velten
maintainer:         ismaelcarlosvelten@gmail.com
extra-source-files: CHANGELOG.md

executable tic-tac-toe
    main-is:           Main.hs
    other-modules:     Game
    build-depends:     base ^>=4.17.2.0
                     , random
                     , data-default
    hs-source-dirs:    src
    default-language:  Haskell2010
